added detail view, staring on dest. list

--- a/flights/views/flights/new.ejs
+++ b/flights/views/flights/new.ejs
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/javascripts/script.js"></script>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <title><%= title %></title>
-</head>
 
-<body>
-    <!-- Form action changes depending on customers.id -->
-    <h1><%= title %></h1>
+  <%- include('../partials/header') %>
 
     <form action="/flights/" method="POST" autocomplete="off"><br>
-        <input placeholder="Airline" type="text" name="airline"  value="" ><br>
-        <input placeholder="Airport" type="text" name="airport" value="" ><br>
+        <select name="airline">
+            <% airlines.forEach((airline) => { %>
+            <option value="<%= airline %>"><%= airline %></option>
+            <% }) %>
+        </select><br>
+        <select name="airport">
+            <% airports.forEach((airport) => { %>
+            <option value="<%= airport %>"><%= airport %></option>
+            <% }) %>
+        </select><br>
         <input placeholder="Flight Number" type="text" name="flightNo" value="" ><br>
         <input placeholder="Depart Date" type="datetime-local" name="departs" value="" ><br>
         <br>
@@ -23,5 +19,7 @@
     </form>
     <br>
     <a href="/"><button>Cancel</button></a>
-</body>
-</html>
+
+    
+
+    <%- include('../partials/footer') %>
