--- a/flights/views/flights/index.ejs
+++ b/flights/views/flights/index.ejs
@@ -1,41 +1,27 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-    <script src="/javascripts/script.js"></script>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-<body>
-    <h1><%= title %></h1>
-    <a href="/flights/new">New Flight</a>
+<%- include('../partials/header') %>
 
+<table>
+  <thead>
+    <tr>
+      <th>Airline</th>
+      <th>Airport</th>
+      <th>Flight Number</th>
+      <th>Departure</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% flights.forEach((flight) => { %>
+      <tr>
+        <td><%= flight.airline %></td>
+        <td><%= flight.airport %></td>
+        <td><%= flight.flightNo %></td>
+        <td><%= flight.departs %></td>
+        <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
+      </tr>
+    <!-- Close the forEach using EJS here -->
+    <% }) %>
+  </tbody>
+</table>
 
-    <table>
-        <thead>
-          <tr>
-            <th>Airline</th>
-            <th>Airport</th>
-            <th>Flight Number</th>
-            <th>Departure</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% flights.forEach((flight) => { %>
-            <tr>
-              <td><%= flight.airline %></td>
-              <td><%= flight.airport %></td>
-              <td><%= flight.flightNo %></td>
-              <td><%= flight.departs %></td>
-            </tr>
-          <!-- Close the forEach using EJS here -->
-          <% }) %>
-        </tbody>
-      </table>
-
-
-</body>
-</html>
+<%- include('../partials/footer') %>
