--- a/flights/views/index.ejs
+++ b/flights/views/index.ejs
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <script src="/javascripts/script.js"></script>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
 
-    <a href="/flights/">All Flights</a>
-    <a href="/flights/new">Add Flight</a>
-  </body>
-</html>
+<%- include('./partials/header') %>
+
+<p>Welcome to the <%= title.toLowerCase() %> main page</p>
+
+
+
+<%- include('./partials/footer') %>
