completed part 3 MVP

--- a/flights/views/flights/index.ejs
+++ b/flights/views/flights/index.ejs
@@ -16,7 +16,7 @@
         <td><%= flight.airline %></td>
         <td><%= flight.airport %></td>
         <td><%= flight.flightNo %></td>
-        <td><%= flight.departs %></td>
+        <td><%= flight.departs.toLocaleString() %></td>
         <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
       </tr>
     <!-- Close the forEach using EJS here -->
